# uWise

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  OPTIMIZATION_SUMMARY.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily-update.yml  deploy.yml  test.yml
docs/: REFLECTIONS.md  UPDATES.md  index.md  manifest.webmanifest  sw.js
docs/core-identity/: architect.md  investor.md  life-artist.md  lifelong-learner.md
docs/cross-domains/: health-tech.md  sustainability.md  tech-art.md
docs/incubation/: charter.md  resources.md  roadmap.md
docs/javascripts/: extra.js  security.js
docs/projects/: ai-art.md  ai-valuation.md  overview.md  quant-strategy.md  smart-home.md
docs/specialized-domains/: ai-expert.md  beijing-culture.md  chinese-culture.md  cloud-native.md  digital-life.md  financial-markets.md  fitness.md  fullstack.md  gaming.md  ip-consultant.md  outdoor.md  photography.md  product-manager.md  psychology.md  quantitative-investment.md  wine-master.md
docs/stylesheets/: custom.css
scripts/: __init__.py  cache.py  config.py  logger.py  main.py  search.py  summary.py  update_knowledge.py  updater.py
tests/: __init__.py  test_cache.py  test_config.py  test_logger.py
